Wed Feb 21 08:13:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SSL_SAP/SSL-server-poll.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-server-simple.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-server.cpp:
          Fixed compile problems when wchar is enabled

Tue Feb 20 19:15:30 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/run_test.lst:

          Adding Object_Manager_Flipping_Test to the list of running
          tests.

Tue Feb 20 18:08:47 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/Object_Manager_Flipping_Test.cpp:
        * tests/tests.mpc:

          Adding new test verifying that after ACE::fini has been called,
          the correct pointer value has been stored in TSS for the Service
          Config.  A subsequent call to ACE::init may SEGV
          otherwise. Thanks to Bjoern Rasmussen <bjoern.d.rasmussen at
          gmail dot com> for reporting it.

Tue Feb 20 17:15:37 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * ace/config-qnx-rtp.h:
        * include/makeinclude/platform_qnx_rtp_gcc.GNU:

          Moved the version detection from the platform_macros file to the
          config file.  This allows us to use the QNX system-defined macro
          _NTO_VERSION, which works in cross-compile environments.  The old
          method of reading the version number from the "uname -a" output is
          not compatible with cross-compilation.

Tue Feb 20 16:38:24 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/templates/gnu.mpd
        * bin/MakeProjectCreator/config/global.features

          Added logic in gnu template for new XSC custom type in CIAO,
          and disabled xsc by default in global.features.

Tue Feb 20 16:12:57 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2820_Regression_Test.cpp: ACEify use of auto_ptr.

Tue Feb 20 16:06:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
