@@ -1,22 +1,0 @@
-/**
- * @file Swap.cpp
- *
- * $Id$
- *
- * @author Carlos O'Ryan <coryan@uci.edu>
- */
-
-#ifndef ACE_SWAP_CPP
-#define ACE_SWAP_CPP
-
-#include "ace/Swap.h"
-
-#if !defined (ACE_LACKS_PRAGMA_ONCE)
-# pragma once
-#endif /* ACE_LACKS_PRAGMA_ONCE */
-
-#if !defined (__ACE_INLINE__)
-#include "ace/Swap.inl"
-#endif /* __ACE_INLINE__ */
-
-#endif /* ACE_SWAP_CPP */
